--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,18 +1,21 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
+
 $color-primary: hsl(0, 0%, 10%);
 $color-text: hsl(0, 0%, 20%);
 $color-subtext: hsl(0, 0%, 30%);
 $color-border: hsl(0, 0%, 85%);
-$color-box-background: mix($color-primary, white, 4%);
+$color-box-background: (#e3f9ff);
 $border-radius: 4px;
-$font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+$font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
   sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 
 body {
   box-sizing: content-box;
   font-family: $font-family;
   margin: 0 auto;
-  line-height: 1.7;
-  padding: 4vh 6vw;
+  line-height: 1.6;
+  padding: 4vh 16vw;
   overflow-x: hidden;
   color: $color-text;
   font-size: 1rem;
@@ -83,7 +86,7 @@ a {
   color: $color-primary;
   &:hover {
     color: black !important;
-    background: #fffaf1;
+    background: #faf7eb;
   }
   &:after {
     position: relative;
