--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="/about">About</a> page.
+This is the footer. Include anything you'd like here, like a link to an <a href="https://www.livingfluently.com/about/">About</a> page.
