--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <a href="https://www.livingfluently.com/">Home</a>
 &nbsp; /&nbsp; <a href="https://www.livingfluently.com/writing/">Writing</a>
-&nbsp; /&nbsp; <a href="https://www.livingfluently.com/an-index-of-trailheads/">Trailheads</a>
+&nbsp; /&nbsp; <a href="https://www.livingfluently.com/net/">Trailheads</a>
 &nbsp; /&nbsp; <a href="https://www.livingfluently.com/about/">About</a>
 
 
