iterated homepage, added TL form to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,21 @@
+
+<div style="background: #ffffff;" >
+
+<form style="border:0px solid #ccc;padding:3px;text-align:left;" action="https://tinyletter.com/livingfluently_" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/livingfluently_', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+    <p><label for="tlemail" style="font-size: 1.2rem;"> Feel free to join the <a href="https://tinyletter.com" target="_blank">tinyletter</a>below - </label></p>
+    <p><input type="text" style="width:133px;" name="email" id="tlemail" value=""/></p>
+    <input type="hidden" value="1" name="embed"/>
+    <input type="submit" value="(ノ^_^)ノ📧" />
+</form>
+
+<hr>
+
+<span style="background: #efefff; padding: .5em .5em; border-radius: 8px; font-weight: 600;">
+
 <a href="https://www.livingfluently.com/">Home</a>
 &nbsp; /&nbsp; <a href="https://www.livingfluently.com/writing/">Writing</a>
 &nbsp; /&nbsp; <a href="https://www.livingfluently.com/net/">Trailheads</a>
 &nbsp; /&nbsp; <a href="https://www.livingfluently.com/about/">About</a>
 
-
+</span>
+</div>
