--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nova+Slim&display=swap');
 
 $color-primary: hsl(0, 0%, 10%);
 $color-text: hsl(0, 0%, 20%);
